--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "android": "npx expo run:android --device",
+    "android:prod": "npx expo run:android --variant release --device",
+    "eas-build-post-install": "node ./scripts/createGoogleServiceFiles.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -16,8 +18,15 @@
     "@expo-google-fonts/dev": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/portal": "^1.0.14",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-native-google-signin/google-signin": "^13.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/yup": "^0.29.14",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
@@ -26,19 +35,26 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
+    "openai": "^4.63.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
