--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@types/yup": "^0.29.14",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
