--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-build-properties": "~0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
