feat: Implemented saving open ai multiple sessions to firestore in user collection

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "ios": "expo run:ios",
+    "ios": "expo run:ios --device",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "android": "npx expo run:android --device",
