[feature/google-apple-sign-in] chgange sructure of navigation, add loading screen, add google sing in, add redirect, small fix

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "bibleapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
