--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "ios": {
       "googleServicesFile": "./GoogleService-Info.plist",
       "supportsTablet": true,
-      "bundleIdentifier": "com.Rueben.BibleStudy"
+      "bundleIdentifier": "com.biblestudy.biblestudy"
     },
     "android": {
       "adaptiveIcon": {
@@ -23,7 +23,7 @@
         "backgroundColor": "#ffffff"
       },
       "googleServicesFile": "./google-services.json",
-      "package": "com.Rueben.BibleStudy"
+      "package": "com.biblestudy.biblestudy"
     },
     "web": {
       "bundler": "metro",
